--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
     "lucide-react": "^0.554.0",
-    "d3-shape": "^3.2.0",
-    "@google/genai": "^1.30.0"
+    "d3-shape": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
